# bioparser

./: .gitignore  README.md  bioparser.cabal
src/Data/: Bioparser.hs
src/Data/Bioparser/: .Prim.hs.swp  Combinators.hs  Prim.hs  Prim1.hs  Types.hs  Util.hs
test/: DMproteome.fasta  HSproteome.fasta  Spec.hs  Test.hs  sample.fasta
