name: bioparser
version: 0.1.0
synopsis: Fast parser for bioinformatics file formats
description: Fast parser for bioinformatics file formats
homepage: https://github.com/fushitarazu/bioparser
license: BSD3
license-file: LICENSE
author: Alind Gupta
maintainer: Alind Gupta
copyright: 2017 Alind Gupta
category: Data
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  hs-source-dirs:
      src
  exposed-modules:
      Data.Bioparser
    , Data.Bioparser.Prim
    , Data.Bioparser.Combinators
    , Data.Bioparser.Types
  build-depends:
      base       >= 4.7   && < 5
    , attoparsec > 0.13.0.0
    , bytestring > 0.9.0  && < 0.12
    , vector     > 0.10.0
    , deepseq
  default-language:
      Haskell2010
  default-extensions:
      OverloadedStrings
  ghc-options: -Wall -O2 -fsimpl-tick-factor=110

test-suite bioparser-test
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is: Test.hs
  build-depends:
      base
    , bioparser
    , QuickCheck  
    , hspec
    , bytestring
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  default-language:
     Haskell2010

    
Benchmark spec
    default-language: Haskell2010
    hs-source-dirs: test
    type:       exitcode-stdio-1.0
    main-is:    Spec.hs
    build-depends: 
        base   >= 4.7 && < 5
      , criterion
      , bioparser
      , bytestring
      , deepseq
      , vector
      , attoparsec
    ghc-options: -O2 -threaded


source-repository head
  type:     git
  location: https://github.com/fushitarazu/bioparser
